--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,9 @@ body {
   background: var(--tg-theme-bg-color);
   color: var(--tg-theme-text-color);
 }
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
