--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,9 @@ body {
   color: var(--tg-theme-text-color);
 }
 
-.App {
+.main {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 auto;
 }
